# CarbonCalcApp

./: README.md  pyproject.toml
backend/: .gitignore
backend/api/: urls.py  views.py
backend/myapp/: settings.py  urls.py
frontend/: package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: ActionInput.tsx  ActionResult.tsx  Footer.tsx  Header.tsx  Summarize.tsx
